# tasks_monitor_by_telegram

./: pyproject.toml
tasks_monitor_bot/: telegram_bot.py
tasks_monitor_bot.egg-info/: LICENSE  PKG-INFO  README.md  pyproject.toml  top_level.txt
tasks_monitor_bot.egg-info/tasks_monitor_bot/: telegram_bot.py
tasks_monitor_bot.egg-info/tasks_monitor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
