[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks_monitor_bot"
version = "0.1.0"
dependencies = [
    "python-telegram-bot>=21.2",
]
requires-python = ">=3.9"
authors = [
  {name = "Carl Li", email = "jiaying.liac@gmail.com"},
]
description = "A simple tasks monitor bot using Telegram"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["telegram-bot", "task-monitor", "bot", "tasks"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
task-monitor= "tasks_monitor_bot.telegram_bot:cli"

